--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,8 +6,10 @@
 @theme inline {
 	--color-background: var(--background);
 	--color-foreground: var(--foreground);
-	--font-sans: var(--font-hs-mische), var(--font-manrope), var(--font-geist-sans);
+	--font-sans: var(--font-sf-pro-display), var(--font-manrope), var(--font-geist-sans);
 	--font-mono: var(--font-geist-mono);
+	--font-sf-pro: var(--font-sf-pro-display);
+	--font-hs-mische: var(--font-hs-mische);
 	--color-sidebar-ring: var(--sidebar-ring);
 	--color-sidebar-border: var(--sidebar-border);
 	--color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
